# rusty_monte_carlo

./: Cargo.toml  LICENSE  README.md  output.txt  projects.json
chapter4_csv/: BAT COUNTRY - High.csv  BAT COUNTRY - Low.csv  BAT COUNTRY - Most Likely.csv  BAT COUNTRY CLASSIC.csv  BAT COUNTRY.csv  BCC - High.csv  BCC - Low.csv  BEYOND THE PALE.csv  BTP - High.csv  BTP - Low.csv  BTP - Most Likely.csv  HIGH WATER MARK.csv  HWM - High.csv  HWM - Low.csv  Input_file.csv  NEEDS MORE BATS.csv  NMB - High.csv  NMB - Low.csv  ch4_project_characterization.xlsm
src/: lib.rs  main.rs
