[package]
name = "rusty_mc"
version = "0.1.0"
authors = ["Katherine Turk <kbturk87@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
rand = "0.7.3"